# jts

./: .gitignore  .travis.yml  CONTRIBUTING.md  DEVELOPING.md  EPIC_PROGRESS_OVERVIEW.md  EPIC_SFA_CURVE_AWARENESS.md  FAQ-LICENSING.md  JDOM_LICENSE.txt  LICENSES.md  LICENSE_MDAVIS_BSDv3.txt  LICENSE_VSI_BSD3.txt  MIGRATION.md  OSGEO_LICENSE.txt  README.md  README.txt  RELEASING.md  USING.md  build.properties  build.xml  faq.html  index.html  jts-doc.css  jts-faq.html  jts-features.html  pom.xml  review.txt
.github/: dependabot.yml
build-tools/: pom.xml
doc/: JTS Technical Specs.docx  JTSOp.md  JTSTestBuilder.md  JTS_Version_History.html  JTS_Version_History.md  TOOLS.md  sample_java_header.txt
javadoc-1.17.0/: allclasses-frame.html  allclasses-noframe.html  help-doc.html  index-all.html  overview-frame.html  overview-summary.html  package-list  serialized-form.html
javadoc-1.18.0/: allclasses-frame.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  javadoc.sh  options  overview-frame.html  overview-summary.html  overview-tree.html  packages  serialized-form.html
javadoc-1.19.0/: allclasses-noframe.html  constant-values.html  index.html  overview-frame.html  package-list  serialized-form.html
javadoc-io/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  (+7 more)
javadoc-io-1.19.0/: allclasses-noframe.html  constant-values.html  overview-frame.html  overview-summary.html
libjts/: Makefile.in  README  TODO  configure  configure.in  jts-config.in  jts_c.cpp  jts_c.h  jtstest.c  jtstest.wkt  valgrind.supp
(+7445 files in other folders)
